fix: mobile nav text align right

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
   border-right: 2px solid #737373;
+  text-align: right;
 }.bm-burger-bars {
   position: fixed;
   width: 2rem;
